--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,22 @@ jobs:
       - name: Run TypeScript type check
         run: npm run type-check
 
+  secret-scan:
+    name: Secret Scanning
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch full history for comprehensive scanning
+
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}
+
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -69,15 +85,16 @@ jobs:
   summary:
     name: CI Summary
     runs-on: ubuntu-latest
-    needs: [lint-and-typecheck, build]
+    needs: [lint-and-typecheck, secret-scan, build]
     if: always()
 
     steps:
       - name: Check CI status
         run: |
-          if [ "${{ needs.lint-and-typecheck.result }}" != "success" ] || [ "${{ needs.build.result }}" != "success" ]; then
+          if [ "${{ needs.lint-and-typecheck.result }}" != "success" ] || [ "${{ needs.secret-scan.result }}" != "success" ] || [ "${{ needs.build.result }}" != "success" ]; then
             echo "❌ CI Failed"
             echo "Lint & Type Check: ${{ needs.lint-and-typecheck.result }}"
+            echo "Secret Scanning: ${{ needs.secret-scan.result }}"
             echo "Build: ${{ needs.build.result }}"
             exit 1
           else
