Update .gitignore to include node_modules in worktrees and add documentation for Git worktrees in CLAUDE.md and AGENTS.md. This enhances parallel agent work capabilities and provides guidelines for managing multiple branches simultaneously.

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,11 @@ Thumbs.db
 
 .cursor/.env.mcp
 .cursor/.env.mcp.backup
+
+## Git Worktrees
+
+# Worktrees directory contains separate working directories
+# We want to ignore node_modules in worktrees (they'll be created per worktree)
+worktrees/*/node_modules/
+# But keep the directory structure itself
+!worktrees/.gitkeep
